docker/k8s-in-docker-desktop/kubeview-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubeview
  name: kubeview
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3030
    targetPort: 8000
  selector:
    k8s-app: kubeview
